# hello-world

./: .gitignore  ACTION_ITEM_MODULE_SUMMARY.md  ADVANCED_EFFECTS_COMPLETE.md  ADVANCED_LAYER_2_ARCHITECTURE.md  ADVANCED_VISUALIZATIONS_CATALOG.md  AESTHETIC_ENHANCEMENT_COMPLETE.md  ANALYSIS_FOUNDATIONS_COMPLETE.md  ANALYSIS_GAP_REVIEW.md  APP_DEVELOPMENT_GUIDE.md  ARCHITECTURE_10_OUT_OF_10.md  ARCHITECTURE_VISUAL_MAP.md  AWARENESS_ARCHITECTURE_FIX_SUMMARY.md  AWARENESS_TERMINAL_UI_COMPLETE.md  BEFORE_AFTER_AESTHETICS.md  BETA_WAVE_RETRIEVAL_COMPLETE.md  CAUSAL_REASONING_ENHANCEMENTS_COMPLETE.md  CHATOPS_INTEGRATION_COMPLETE.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPACT_PANEL_SIZES_ADDED.md  COMPLETE_MATHEMATICAL_FOUNDATION.md  COMPLETE_MULTI_WAVE_STREAMING_SYSTEM.md  CONNECTING_ANIMATIONS_ANALYSIS.md  CONNECTING_ANIMATIONS_COMPLETE.md  CONNECTING_ANIMATIONS_DEEP_DIVE.md  CONNECTING_ANIMATIONS_MASTER_GUIDE.md  CONNECTING_ANIMATIONS_SUMMARY.md  CONTEXT_PACKER_ELEGANCE.md  CONTRIBUTING.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DASHBOARD_FIXES_COMPLETE.md  DASHBOARD_SLICK_ENHANCEMENTS.md  DASHBOARD_SYSTEM_COMPLETE.md  DAY_SUMMARY_2025_10_27.md  Dockerfile.production  ELEGANCE_COMPLETE.md  FEATURE_ROADMAP.md  FRAMEWORK_SEPARATION_PLAN.md  FUTURE_WORK.md  HOLOLOOM_MASTER_SCOPE_AND_SEQUENCE.md  (+199 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
HoloLoom/: AUTOSPIN_README.md  BACKEND_SETUP_GUIDE.md  CONVERSATIONAL_README.md  INTEGRATION_COMPLETE.md  Orchestrator.py  README.md  __init__.py  autospin.py  bootstrap_system.py  check_holoLoom.py  config.py  conversational.py  docker-compose.yml  hololoom.py  requirements.txt  smart_weaving_orchestrator.py  terminal_ui.py  test_backends.py  test_smart_integration.py  unified_api.py  validate_pipeline.py  visualize_bootstrap.py  weaving_orchestrator.py  weaving_shuttle.py
Promptly/: DEPLOYMENT_CHECKLIST.txt  DOCKER_SETUP.md  FINAL_COMPLETE.md  PROMPTLY_SKILLS_GUIDE.md  PROMPTLY_V1.1_RELEASE_NOTES.md  QUICKSTART.md  QUICK_WINS_COMPLETE.md  (+13 more)
apps/darkTrace/: pyproject.toml
apps/darkTrace/darkTrace/: __init__.py  api.py  cli.py  config.py
apps/darkTrace/darkTrace/analyzers/: __init__.py  attractor_detector.py  fingerprint_generator.py  pattern_recognizer.py  trajectory_predictor.py
apps/darkTrace/darkTrace/observers/: __init__.py  semantic_observer.py  trajectory_recorder.py
apps/darkTrace/examples/: basic_observation.py  fingerprinting.py  trajectory_prediction.py
(+1366 files in other folders)
